@@ -484,3 +484,18 @@ def relpath(base, path):
         raise NotBranchError("path %r is not within branch %r" % (rp, base))
 
     return os.sep.join(s)
+
+
+
+def terminal_width():
+    """Return estimated terminal width."""
+
+    # TODO: Do something smart on Windows?
+
+    # TODO: Is there anything that gets a better update when the window
+    # is resized while the program is running? We could use the Python termcap
+    # library.
+    try:
+        return int(os.environ['COLUMNS'])
+    except (IndexError, KeyError, ValueError):
+        return 80
